--- a/styles.css
+++ b/styles.css
@@ -23,3 +23,25 @@ input.itwc:focus {
     border: 3px solid #ec6607;
     color: #ec6607;
 }
+
+h4.itwc{
+    color: #ec6607;
+    font-size: 24px;
+    margin: 20px 0px 10px 0px;
+}
+
+button.itwc{
+    background-color: #ec6607;
+    color: #ffffff;
+    appearance: none;
+    border: 1px solid #bfbfbf;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 10px 10px 10px 0px;
+    display: inline-block;
+}
+
+a.itwc{
+    color: #ec6607;
+    text-decoration: none;
+}
