added event form

--- a/event-overview-styles.css
+++ b/event-overview-styles.css
@@ -9,3 +9,19 @@
     padding: 0 2vmin;
     border-radius: 10px;
 }
+
+#form{
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    border-radius: 50%;
+    border: none;
+    border: 1px solid #000;
+    font-size: 24px;
+    padding: 8px 16px;
+    vertical-align: middle;
+    overflow: hidden;
+    color: #fff;
+    background-color: #008FD3;
+    cursor: pointer;
+}
