teilnehmer anzahl hinzugefügt

--- a/event-overview-styles.css
+++ b/event-overview-styles.css
@@ -25,3 +25,10 @@
     background-color: #008FD3;
     cursor: pointer;
 }
+
+#right{
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    align-items: center;
+}
